mediaqueries.css
/* Media query */
nav .fas {
    display: none;
}

@media only screen and (max-width: 1250px) {
    .row .header-text {
        flex-basis: 100%;
    }
}

@media only screen and (max-width: 1000px) {

    #header .row {
        position: relative;
    }

    .row .header-image {
        position: absolute;
        align-items: normal;
        flex-basis: 100%;
        width: 100%;
        z-index: 100;
        padding: 10vh 0 0 0;
    }

    .header-image img {
        height: 250px;
        width: 250px;
        border-radius: 10%;
    }

    .row .header-text {
        position: absolute;
        flex-basis: 100%;
        font-size: 20px;
        align-items: end;
        padding-bottom: 10vh;
    }

    .header-text h1 {
        font-size: 50px;
    }
    
    nav {
        width: auto;
    }

    nav .fas {
        display: block;
        font-size: 18px;
    }

    nav ul {
        background:#E67A7A;
        position: fixed;
        top: 0;
        right: -200px;
        width: 200px;
        height: 100vh;
        padding-top: 50px;
        z-index: 2;
        transition: right 0.5s;
    }

    nav ul li {
        display: block;
        margin: 25px;
    }

    nav ul .fas {
        position: absolute;
        top: 25px;
        left: 25px;
        cursor: pointer;;
    }
}


@media only screen and (max-width: 600px) {

    .row .header-text {
        font-size: 16px;
        flex-basis: 100%;
    }

    .header-text h1 {
        font-size: 26px;
    }

    .subtitle {
        font-size: 40px;
    }

    .about-col-1, .about-col-2 {
        flex-basis: 100%;
        font-size: 14px;
        margin-bottom: 30px;
    }

    .tab-links {
        font-size: 16px;
        margin-right: 20px;
    }

    .contact-left, .contact-right {
        flex-basis: 100%;
    }
}

